# astrobench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
astrobench/: __init__.py  cli.py  grader.py  problems.py  submit.py  web.py
astrobench/problems/: astrophysics.yaml
astrobench/templates/: index.html  problems.html
