[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrobench"
version = "0.1.0"
description = "Open-source LLM benchmark using real astrophysics reasoning problems"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "requests>=2.31",
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "aiofiles>=23.3",
]

[project.scripts]
astrobench = "astrobench.cli:cli"
